@@ -1,5 +1,5 @@
 //
-// "$Id: Fl_Type.cxx,v 1.6.2.6.2.15 2003/07/18 03:49:58 matthiaswm Exp $"
+// "$Id: Fl_Type.cxx,v 1.6.2.6.2.16 2003/07/18 17:43:30 matthiaswm Exp $"
 //
 // Widget type code for the Fast Light Tool Kit (FLTK).
 //
@@ -370,7 +370,7 @@ int Widget_Browser::handle(int e) {
     if (!title) break;
     l = (Fl_Type*)find_item(Fl::event_y());
     if (l) {
-      X += 10*l->level;
+      X += 12*l->level + 18 - hposition();
       if (l->is_parent() && Fl::event_x()>X && Fl::event_x()<X+13) ;
       else l = 0;
     }
@@ -791,5 +791,5 @@ void Fl_Type::read_property(const char *c) {
 int Fl_Type::read_fdesign(const char*, const char*) {return 0;}
 
 //
-// End of "$Id: Fl_Type.cxx,v 1.6.2.6.2.15 2003/07/18 03:49:58 matthiaswm Exp $".
+// End of "$Id: Fl_Type.cxx,v 1.6.2.6.2.16 2003/07/18 17:43:30 matthiaswm Exp $".
 //
